<resources>
    <string name="app_name">MyMovies</string>
    <string name="success">Success!</string>
    <string name="movie_poster">Movie poster</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rating">Top Rated</string>
    <string name="title">Title:</string>
    <string name="original_title">Original Title:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="description">Description:</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="start_trailer">start trailer</string>
</resources>